Labexercise3_Temperaturregulator/Temperature-Control.cydsn/REBUILD.log
--------------- Rebuild Started: 11/04/2020 12:35:02 Project: Temperature-Control, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PIDControl.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_handler.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SDA_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SCL_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_SLAVE.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\I2C_1_MASTER.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock_PWM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Pin_PWM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cy_em_eeprom.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Temperature-Control.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Temperature-Control.elf"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Temperature-Control.map"
Deleting file ".\Temperature-Control.cycdx"
Deleting file ".\Temperature-Control.svd"
Deleting file ".\Temperature-Control.rpt"
Deleting file ".\Temperature-Control_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\Simon\AppData\Local\Cypress Semiconductor\PSoC Creator\4.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\Simon\Desktop\GFV-Gruppe14\Labexercise3_Temperaturregulator\Temperature-Control.cydsn\Temperature-Control.cyprj -d CY8C5888LTI-LP097 -s C:\Users\Simon\Desktop\GFV-Gruppe14\Labexercise3_Temperaturregulator\Temperature-Control.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/PIDControl.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c PIDControl.c -o .\CortexM3\ARM_GCC_541\Debug\PIDControl.o
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/I2C_handler.lst -g -D DEBUG -Wall -ffunction-sections -ffat-lto-objects -Og -c ..\..\Labexercise2_Communicationbuses\Lab_I2C\Communicationbuses.cydsn\I2C_handler.c -o .\CortexM3\ARM_GCC_541\Debug\I2C_handler.o
..\..\Labexercise2_Communicationbuses\Lab_I2C\Communicationbuses.cydsn\I2C_handler.c:23:7: error: conflicting types for 'readTemp'
 float readTemp()
       ^
In file included from ..\..\Labexercise2_Communicationbuses\Lab_I2C\Communicationbuses.cydsn\I2C_handler.c:12:0:
./I2C_handler.h:17:6: note: previous declaration of 'readTemp' was here
 int8 readTemp();
      ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 11/04/2020 12:35:15 ---------------
